recusion file updated

--- a/DSA/Recursion.ipynb
+++ b/DSA/Recursion.ipynb
@@ -527,7 +527,7 @@
     }
    ],
    "source": [
-    "# permutations\n",
+    "# permutations (using map)\n",
     "\n",
     "#O(n! * n)\n",
     "#O(n)\n",
@@ -555,129 +555,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "c33b5130-4f9a-48a6-8d8c-c1818b9aed5d",
+   "execution_count": 4,
+   "id": "e1835d36-67cd-432f-a0c3-94684b28e97c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "yes\n"
+      "[[1, 2, 3], [1, 3, 2], [2, 1, 3], [2, 3, 1], [3, 2, 1], [3, 1, 2]]\n"
      ]
     }
    ],
    "source": [
-    "d = {1:[2],2:4}\n",
-    "if 3 not in d:\n",
-    "    print(\"yes\")\n",
+    "def permutations(i, lst, ans):\n",
+    "    if i==len(lst):\n",
+    "        ans.append(lst[:])\n",
+    "        return\n",
+    "    for a in range(i,len(lst)):\n",
+    "        (lst[i], lst[a]) = (lst[a], lst[i]) \n",
+    "        permutations(i+1, lst, ans)\n",
+    "        (lst[i], lst[a]) = (lst[a], lst[i])\n",
+    "    return ans\n",
+    "print(permutations(0, [1,2,3],[]))        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b963c286-85a3-453d-9ab3-b026d15a77c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'bb', 'aa']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Paritioning pallindrom\n",
     "\n",
-    "else:\n",
-    "    print(\"no\")"
+    "def part_pallin(i , lst, ans):\n",
+    "\n",
+    "    if i == len(lst):\n",
+    "        return\n",
+    "\n",
+    "    for j in range(i+1, len(lst)+1):\n",
+    "        if lst[i:j] == lst[i:j][::-1] and lst[i:j] not in ans:\n",
+    "            ans.append(lst[i:j])\n",
+    "        part_pallin(i+1 , lst, ans)\n",
+    "    return ans\n",
+    "\n",
+    "print(part_pallin(0,\"aabb\",[]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "a2a79f18-9b7c-45fe-a129-8a58fe7aeeb4",
+   "execution_count": 6,
+   "id": "0eee2819-358a-4517-93a0-cc335e8498b1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{0: 0}"
+       "['g']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dic = {}\n",
-    "dic[0] = 0\n",
-    "dic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "9887f35a-232b-490d-ad78-87bc98c98d40",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "del dic[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "c487181e-ee7b-4081-9187-1fac0913c199",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{}"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "f96170bb-ad4e-4f67-9880-5ba61e1353cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2, 3, 4, [], 5, 6]"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = [2,3,4,\n",
-    "     [],5,6]\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "7b43efb4-770a-4136-abb4-c359deff84ab",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2, 3, 4, [], 5, 6]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a[:]"
+    "a = [\"g\",\"d\"]\n",
+    "a[0:1]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97d912aa-25ad-4ce2-a82c-8a7943660124",
+   "id": "4a809147-9ae1-4f0f-bf05-e3aa9ccb08a6",
    "metadata": {},
    "outputs": [],
    "source": []
