--- a/DSA/Sorting_techniques.ipynb
+++ b/DSA/Sorting_techniques.ipynb
@@ -15,6 +15,8 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "#selection sort\n",
     "\n",
     "def selection_sort(lst):\n",
@@ -251,7 +253,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def partition(array, low, high):\n",
+    "    pivot = array[high]\n",
+    "    i = low - 1\n",
     "\n",
+    "    for j in range(low, high):\n",
+    "        if array[j] <= pivot:\n",
+    "            i += 1\n",
+    "            array[i], array[j] = array[j], array[i]\n",
+    "\n",
+    "    array[i+1], array[high] = array[high], array[i+1]\n",
+    "    return i+1\n",
+    "\n",
+    "def quicksort(array, low=0, high=None):\n",
+    "    if high is None:\n",
+    "        high = len(array) - 1\n",
+    "\n",
+    "    if low < high:\n",
+    "        pivot_index = partition(array, low, high)\n",
+    "        quicksort(array, low, pivot_index-1)\n",
+    "        quicksort(array, pivot_index+1, high)\n",
+    "\n",
+    "my_array = [64, 34, 25, 12, 22, 11, 90, 5]\n",
+    "quicksort(my_array)\n",
+    "print(\"Sorted array:\", my_array)\n",
     "\n",
     "\n"
    ]
