--- a/DSA/Sorting_techniques.ipynb
+++ b/DSA/Sorting_techniques.ipynb
@@ -280,6 +280,65 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "56cad1eb-2955-4fe9-8142-94910a73148c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unsorted Array\n",
+      "[8, 7, 2, 1, 0, 9, 6]\n",
+      "Sorted Array in Ascending Order:\n",
+      "[0, 1, 2, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# quick sort\n",
+    "\n",
+    "def partition(array, low, high):\n",
+    "  pivot = array[high]\n",
+    "  i = low - 1\n",
+    "\n",
+    "  for j in range(low, high):\n",
+    "    if array[j] <= pivot:\n",
+    "      i = i + 1\n",
+    "\n",
+    "      (array[i], array[j]) = (array[j], array[i])\n",
+    "\n",
+    "  (array[i + 1], array[high]) = (array[high], array[i + 1])\n",
+    "  return i + 1\n",
+    "\n",
+    "def quickSort(array, low, high):\n",
+    "  if low < high:\n",
+    "    pi = partition(array, low, high)\n",
+    "    quickSort(array, low, pi-1 )\n",
+    "    quickSort(array, pi + 1, high)\n",
+    "\n",
+    "data = [8, 7, 2, 1, 0, 9, 6]\n",
+    "print(\"Unsorted Array\")\n",
+    "print(data)\n",
+    "\n",
+    "size = len(data)\n",
+    "\n",
+    "quickSort(data, 0, size - 1)\n",
+    "\n",
+    "print('Sorted Array in Ascending Order:')\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9ee59c7-7cc1-43d1-bb19-4d74287f648f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
