updated files added.

--- a/DSA/Linked_list.ipynb
+++ b/DSA/Linked_list.ipynb
@@ -47,7 +47,7 @@
     "                temp=temp.next\n",
     "            temp.next = new_node\n",
     "\n",
-    "# Inserting element at end\n",
+    "# Inserting element at mid\n",
     "    def insert_mid(self,ind,data):\n",
     "        new_node = node(data)\n",
     "\n",
@@ -111,13 +111,14 @@
     "#Deletion at the first\n",
     "\n",
     "    def delete_first(self):\n",
+    "        temp = self.head\n",
     "        if self.head == None:\n",
     "            print(\"LL is Empty.\")\n",
     "        elif self.head.next ==None:\n",
     "            self.head = None\n",
     "            temp = None\n",
     "        else:\n",
-    "            temp = self.head\n",
+    "            \n",
     "            self.head = temp.next\n",
     "            temp = None\n",
     "\n",
