--- a/DSA/Recursion.ipynb
+++ b/DSA/Recursion.ipynb
@@ -613,8 +613,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4a809147-9ae1-4f0f-bf05-e3aa9ccb08a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibbo(n):\n",
+    "    a,b = 0,1\n",
+    "    print(a)\n",
+    "    print(b)\n",
+    "    d = 2\n",
+    "    while d < n:\n",
+    "        c = a+b\n",
+    "        print(c)\n",
+    "        a = b\n",
+    "        b = c\n",
+    "        d = d+1\n",
+    "    return\n",
+    "\n",
+    "fibbo(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bd937f2-edc8-4f50-b2b9-380b86c6119e",
    "metadata": {},
    "outputs": [],
    "source": []
