updated files added.

--- a/DSA/Recursion.ipynb
+++ b/DSA/Recursion.ipynb
@@ -648,8 +648,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "3bd937f2-edc8-4f50-b2b9-380b86c6119e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "['n', 'a', 'r', 'u', 'v']\n",
+      "1\n",
+      "['n', 'u', 'r', 'a', 'v']\n",
+      "nurav\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse_string(i, a):\n",
+    "    a = [i for i in a]\n",
+    "    if i== len(a)//2:\n",
+    "        return \"\".join(a)\n",
+    "    else:\n",
+    "        print(i)\n",
+    "        a[i], a[len(a)-i-1] = a[len(a)-i-1], a[i]\n",
+    "        print(a)\n",
+    "        \n",
+    "    return reverse_string(i+1, a)\n",
+    "print(reverse_string(0 , \"varun\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a29b2472-9b7c-4e3d-a4be-2eaaf21ca48e",
    "metadata": {},
    "outputs": [],
    "source": []
