--- a/DSA/Recursion.ipynb
+++ b/DSA/Recursion.ipynb
@@ -23,14 +23,13 @@
     "    (s[i],s[len(s)-1-i]) = (s[len(s)-1-i], s[i])\n",
     "    return rev_str(i+1,s)\n",
     "\n",
-    "    \n",
     "s = [1,2,4,5]\n",
     "print(rev_str(0,s))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f1e9d100-7198-42ae-a19c-e2e75c17ea44",
    "metadata": {},
    "outputs": [
@@ -38,14 +37,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " madam\n"
+      " varun\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
@@ -448,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "717864e5-2492-425d-9249-3e2345ae0167",
    "metadata": {},
    "outputs": [
@@ -456,7 +455,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n"
+      "120\n"
      ]
     }
    ],
@@ -465,11 +464,11 @@
     "#functional way\n",
     "\n",
     "def fact(n):\n",
-    "  if n==1:\n",
+    "  if n==0:\n",
     "    return 1\n",
     "  return n * fact(n-1)\n",
     "\n",
-    "print(fact(3))\n",
+    "print(fact(5))\n",
     "     "
    ]
   },
