files are updated

--- a/interview/basic questionns.ipynb
+++ b/interview/basic questionns.ipynb
@@ -661,8 +661,280 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "b40e0839-836e-409d-85e2-6984f8daa350",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 5, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#selection sort\n",
+    "\n",
+    "a = [4,7,2,8,5]\n",
+    "\n",
+    "for i in range(len(a)):\n",
+    "    mina = i\n",
+    "    for j in range(i+1, len(a)):\n",
+    "        if a[mina] > a[j]:\n",
+    "            mina = j\n",
+    "    (a[mina] , a[i]) = (a[i] , a[mina])\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "6c3124c5-8f7f-4cf5-95d9-5db5df2219a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 5, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# bubble sort\n",
+    "a = [4,7,2,8,5]\n",
+    "\n",
+    "l = len(a)\n",
+    "swapped = 1\n",
+    "while l > 0:\n",
+    "    for i in range(l-1):\n",
+    "        if a[i] > a[i+1]:\n",
+    "            swapped = 0\n",
+    "            (a[i], a[i+1]) = (a[i+1], a[i])\n",
+    "    if swapped == 1:\n",
+    "        break\n",
+    "    l =l-1\n",
+    "print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "91a7c3d2-7e75-4abe-885c-ddf0aac40950",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 5, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# insertion sort\n",
+    "a = [4,7,2,8,5]\n",
+    "l = len(a)\n",
+    "\n",
+    "for i in range(1,l):\n",
+    "    key = a[i]\n",
+    "    j = i-1\n",
+    "    while j>=0 and a[j] > key:\n",
+    "        a[j+1] = a[j]\n",
+    "        j =j-1\n",
+    "    a[j+1] = key\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "08d03197-1b97-4af5-a2ff-ed954180637d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#merge sort\n",
+    "\n",
+    "a = [4,7,2,8,5]\n",
+    "\n",
+    "def merge_sort(a):\n",
+    "    if len(a) <= 1:\n",
+    "        return a\n",
+    "\n",
+    "    mid = len(a)//2\n",
+    "    left_sort = merge_sort(a[:mid])\n",
+    "    right_sort = merge_sort(a[mid+1:])\n",
+    "\n",
+    "    return merge(left_sort, right_sort)\n",
+    "\n",
+    "def merge(l , r):\n",
+    "    res = []\n",
+    "    c, d = 0, 0\n",
+    "\n",
+    "    while c < len(l) and d < len(r):\n",
+    "        if l[c] < r[d]:\n",
+    "            res.append(l[c])\n",
+    "            c =c+1\n",
+    "        else:\n",
+    "            res.append(r[d])\n",
+    "            d =d+1\n",
+    "\n",
+    "    res.extend(l[c:])\n",
+    "    res.extend(r[d:])\n",
+    "\n",
+    "    return res\n",
+    "\n",
+    "print(merge_sort(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "d36004f9-a8fb-4f8c-8bac-2e4c5f4a4011",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 5, 6, 6, 53, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#selecti\n",
+    "\n",
+    "a = [3,5,2,6,53,6]\n",
+    "\n",
+    "for i in range(len(a)):\n",
+    "    mina = i\n",
+    "    for j in range(i+1, len(a)):\n",
+    "        if a[mina] > a[j]:\n",
+    "            mina =j\n",
+    "\n",
+    "    (a[mina] , a[j]) = (a[j], a[mina])\n",
+    "    \n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "19cfeb30-d66a-4719-a6f7-a4cc4228991f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 6, 6, 53]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# bb\n",
+    "a = [3,5,2,6,53,6]\n",
+    "\n",
+    "l = len(a)\n",
+    "\n",
+    "while l>0:\n",
+    "    for i in range(l-1):\n",
+    "        if a[i] > a[i+1]:\n",
+    "            (a[i], a[i+1]) = (a[i+1],a[i])\n",
+    "\n",
+    "    l = l-1\n",
+    "\n",
+    "print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "d03492ee-23e7-406e-8cd8-7adf27443e56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not fount\n"
+     ]
+    }
+   ],
+   "source": [
+    "# linear serch\n",
+    "\n",
+    "a = [3,4,12,33,14,21]\n",
+    "key = 1\n",
+    "\n",
+    "for i in range(len(a)):\n",
+    "    if a[i] == key:\n",
+    "        print(i)\n",
+    "        break\n",
+    "if i ==len(a)-1:\n",
+    "    print(\"not fount\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "0db117fb-0e9e-4bad-a9ee-4a5e5f098a03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 12, 14, 21, 33]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = sorted([3,4,12,33,14,21])\n",
+    "print(a)\n",
+    "key = 14\n",
+    "\n",
+    "def binary_search(a,k, low, high):\n",
+    "    mid = len(a)//2\n",
+    "    if low <=high:\n",
+    "        if a[mid] == k:\n",
+    "            return mid\n",
+    "        if a[mid] > key:\n",
+    "            return binary_search(a, k, mid+1, high)\n",
+    "        else:\n",
+    "            return binary_search(a, k,low, mid-1)\n",
+    "    else:\n",
+    "        return -1\n",
+    "\n",
+    "binary_search(a,key, 0, len(a)-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "511c2c13-b746-4ea3-9246-9eb3e4dd8303",
    "metadata": {},
    "outputs": [],
    "source": []
