files are updated

--- a/02_Pandas_Exercise.ipynb
+++ b/02_Pandas_Exercise.ipynb
@@ -128,7 +128,7 @@
     "    return np.dot(x,y)\n",
     "\n",
     "print (\"\\nProblem 2 \\n\")\n",
-    "print(numpy_dot(A,B))"
+    "print(numpy_dot(A,B))\n"
    ]
   },
   {
