files are updated

--- a/interview/Sorting_techniques.ipynb
+++ b/interview/Sorting_techniques.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e9d4092e-a29d-4152-afaf-6f8e83990bb8",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
     "    for i in range(l):\n",
     "        min_ind = i\n",
     "        for j in range(i+1, l):\n",
-    "            if lst[i] > lst[j]:\n",
+    "            if lst[min_ind] > lst[j]:\n",
     "                min_ind = j\n",
     "        (lst[min_ind], lst[i]) = (lst[i] ,lst[min_ind])\n",
     "    return lst\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "bfec8534-9828-450c-9792-5b1c21ad1049",
    "metadata": {},
    "outputs": [
