files are updated

--- a/interview/basic questionns.ipynb
+++ b/interview/basic questionns.ipynb
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "id": "d36004f9-a8fb-4f8c-8bac-2e4c5f4a4011",
    "metadata": {},
    "outputs": [
@@ -808,7 +808,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 5, 6, 6, 53, 2]\n"
+      "2\n",
+      "2\n",
+      "5\n",
+      "[2, 3, 5, 6, 6, 53]\n"
      ]
     }
    ],
@@ -819,11 +822,12 @@
     "\n",
     "for i in range(len(a)):\n",
     "    mina = i\n",
-    "    for j in range(i+1, len(a)):\n",
+    "    for j in range(i, len(a)):\n",
     "        if a[mina] > a[j]:\n",
+    "            print(j)\n",
     "            mina =j\n",
     "\n",
-    "    (a[mina] , a[j]) = (a[j], a[mina])\n",
+    "    (a[mina] , a[i]) = (a[i], a[mina])\n",
     "    \n",
     "\n",
     "print(a)"
@@ -889,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "id": "0db117fb-0e9e-4bad-a9ee-4a5e5f098a03",
    "metadata": {},
    "outputs": [
@@ -897,44 +901,99 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 4, 12, 14, 21, 33]\n"
+      "Element is present at index 1\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = sorted([3,4,12,33,14,21])\n",
-    "print(a)\n",
-    "key = 14\n",
+    "# Binary Search in python\n",
     "\n",
-    "def binary_search(a,k, low, high):\n",
-    "    mid = len(a)//2\n",
-    "    if low <=high:\n",
-    "        if a[mid] == k:\n",
+    "\n",
+    "def binarySearch(array, x, low, high):\n",
+    "\n",
+    "    if high >= low:\n",
+    "\n",
+    "        mid = low + (high - low)//2\n",
+    "\n",
+    "        # If found at mid, then return it\n",
+    "        if x == array[mid]:\n",
     "            return mid\n",
-    "        if a[mid] > key:\n",
-    "            return binary_search(a, k, mid+1, high)\n",
+    "\n",
+    "        # Search the right half\n",
+    "        elif x > array[mid]:\n",
+    "            return binarySearch(array, x, mid + 1, high)\n",
+    "\n",
+    "        # Search the left half\n",
     "        else:\n",
-    "            return binary_search(a, k,low, mid-1)\n",
+    "            return binarySearch(array, x, low, mid - 1)\n",
+    "\n",
     "    else:\n",
     "        return -1\n",
     "\n",
-    "binary_search(a,key, 0, len(a)-1)"
+    "\n",
+    "array = [3, 4, 5, 6, 7, 8, 9]\n",
+    "x = 4\n",
+    "\n",
+    "result = binarySearch(array, x, 0, len(array)-1)\n",
+    "\n",
+    "if result != -1:\n",
+    "    print(\"Element is present at index \" + str(result))\n",
+    "else:\n",
+    "    print(\"Not found\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "511c2c13-b746-4ea3-9246-9eb3e4dd8303",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element is present at index 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Binary Search in python\n",
+    "\n",
+    "\n",
+    "def binarySearch(array, x, low, high):\n",
+    "\n",
+    "    # Repeat until the pointers low and high meet each other\n",
+    "    while low <= high:\n",
+    "\n",
+    "        mid = low + (high - low)//2\n",
+    "\n",
+    "        if x == array[mid]:\n",
+    "            return mid\n",
+    "\n",
+    "        elif x > array[mid]:\n",
+    "            low = mid + 1\n",
+    "\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "\n",
+    "    return -1\n",
+    "\n",
+    "\n",
+    "array = [3, 4, 5, 6, 7, 8, 9]\n",
+    "x = 4\n",
+    "\n",
+    "result = binarySearch(array, x, 0, len(array)-1)\n",
+    "\n",
+    "if result != -1:\n",
+    "    print(\"Element is present at index \" + str(result))\n",
+    "else:\n",
+    "    print(\"Not found\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "511c2c13-b746-4ea3-9246-9eb3e4dd8303",
+   "id": "2cef22f6-7980-4245-9c10-1571302fe900",
    "metadata": {},
    "outputs": [],
    "source": []
