--- a/interview/Sorting_techniques.ipynb
+++ b/interview/Sorting_techniques.ipynb
@@ -243,7 +243,7 @@
     "    return h\n",
     "\n",
     "\n",
-    "print(quick_sort([5,4,7,2,1,9], 0 , 5))"
+    "print(quick_sort([5,4,7,2,1,9], 0 , 5))\n"
    ]
   },
   {
