--- a/interview/basic questionns.ipynb
+++ b/interview/basic questionns.ipynb
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "id": "08d03197-1b97-4af5-a2ff-ed954180637d",
    "metadata": {},
    "outputs": [
@@ -759,7 +759,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4, 8]\n"
+      "[2, 4, 5, 7, 8]\n"
      ]
     }
    ],
@@ -774,7 +774,7 @@
     "\n",
     "    mid = len(a)//2\n",
     "    left_sort = merge_sort(a[:mid])\n",
-    "    right_sort = merge_sort(a[mid+1:])\n",
+    "    right_sort = merge_sort(a[mid:])\n",
     "\n",
     "    return merge(left_sort, right_sort)\n",
     "\n",
