files are updated

--- a/interview/basic questionns.ipynb
+++ b/interview/basic questionns.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6c04c4e7-bbe6-4798-b118-f31e8cc9788e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 7\n"
@@ -39,7 +39,7 @@
     "        count += 1\n",
     "\n",
     "print(f'count : {count}')\n",
-    "print(ls)\n"
+    "print(ls)"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 5\n"
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 7\n"
