files are updated

--- a/interview/02. NumPy.ipynb
+++ b/interview/02. NumPy.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "80d0105b-21ec-47d0-8f22-a44ddd92c3df",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
    ],
    "source": [
     "L = [True, \"2\", 3.0, 4]\n",
-    "[type(item) for item in L]"
+    "[type(item) for item in L]\n"
    ]
   },
   {
