--- a/interview/02. NumPy.ipynb
+++ b/interview/02. NumPy.ipynb
@@ -67,7 +67,7 @@
    ],
    "source": [
     "L = [True, \"2\", 3.0, 4]\n",
-    "[type(item) for item in L]\n"
+    "[type(item) for item in L]"
    ]
   },
   {
