--- a/interview/Sorting_techniques.ipynb
+++ b/interview/Sorting_techniques.ipynb
@@ -24,7 +24,7 @@
     "    \n",
     "    for i in range(l):\n",
     "        min_ind = i\n",
-    "        for j in range(i+1, l):\n",
+    "        for j in range(i, l):\n",
     "            if lst[min_ind] > lst[j]:\n",
     "                min_ind = j\n",
     "        (lst[min_ind], lst[i]) = (lst[i] ,lst[min_ind])\n",
