--- a/interview/practise.ipynb
+++ b/interview/practise.ipynb
@@ -57,7 +57,7 @@
     "        \n",
     "        l = l-1\n",
     "    return a\n",
-    "print(bub_sort(a))"
+    "print(bub_sort(a))\n"
    ]
   },
   {
